[gd_scene load_steps=18 format=3 uid="uid://5pjqc7erivb3"]

[ext_resource type="Script" path="res://scripts/plane.gd" id="1_gbgy5"]
[ext_resource type="Texture2D" uid="uid://b05bok2j0rygs" path="res://assets/plane/plane.png" id="2_5ghgm"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="3_0tcvi"]
[ext_resource type="Script" path="res://scripts/plane_patrol.gd" id="4_orfw6"]
[ext_resource type="Texture2D" uid="uid://cnxee3rrw5d8k" path="res://assets/plane/plane_wander.png" id="5_lpmvc"]
[ext_resource type="Script" path="res://scripts/plane_detect_shock.gd" id="6_8yd3w"]
[ext_resource type="Texture2D" uid="uid://bvdg21bounoju" path="res://assets/plane/plane_alert.png" id="7_b1rre"]
[ext_resource type="Script" path="res://scripts/plane_approach.gd" id="8_5t04r"]
[ext_resource type="Script" path="res://scripts/plane_charge.gd" id="9_jl1wm"]
[ext_resource type="Texture2D" uid="uid://daqd2fqc7q8om" path="res://assets/plane/plane_attack.png" id="10_h05fq"]
[ext_resource type="Script" path="res://scripts/plane_hit.gd" id="11_iamot"]
[ext_resource type="Script" path="res://scripts/plane_destroyed.gd" id="11_olubv"]
[ext_resource type="Texture2D" uid="uid://cmeibp3rrruix" path="res://assets/plane/plane_daze.png" id="12_ajksy"]
[ext_resource type="Texture2D" uid="uid://bv7qbfaii1ud7" path="res://assets/plane/plane_weak.png" id="12_q7s16"]
[ext_resource type="Texture2D" uid="uid://jv15g42dkktf" path="res://assets/plane/plane_destroyed.png" id="14_aoils"]
[ext_resource type="Script" path="res://scripts/plane_return_to_patrol.gd" id="15_vt2gn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_b1u7b"]
radius = 2.0
height = 6.0

[node name="Plane" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_gbgy5")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_5ghgm")

[node name="StateIndicator" type="Sprite2D" parent="."]
position = Vector2(7, -3.99999)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_b1u7b")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(80, 0)
collision_mask = 5

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_0tcvi")
initial_state = NodePath("patrol")

[node name="patrol" type="Node" parent="StateMachine" node_paths=PackedStringArray("plane")]
script = ExtResource("4_orfw6")
plane = NodePath("../..")
speed = 40.0
detect_time = 0.2

[node name="detect_shock" type="Node" parent="StateMachine" node_paths=PackedStringArray("plane")]
script = ExtResource("6_8yd3w")
plane = NodePath("../..")
status_texture = ExtResource("7_b1rre")

[node name="Timer" type="Timer" parent="StateMachine/detect_shock"]
wait_time = 0.6
one_shot = true

[node name="approach" type="Node" parent="StateMachine" node_paths=PackedStringArray("plane")]
script = ExtResource("8_5t04r")
plane = NodePath("../..")
status_texture = ExtResource("7_b1rre")
reach_radius = 20.0
speed = 50.0
up_from_player = 30.0
sight_break_time = 0.6

[node name="charge" type="Node" parent="StateMachine" node_paths=PackedStringArray("plane")]
script = ExtResource("9_jl1wm")
plane = NodePath("../..")
status_texture = ExtResource("10_h05fq")
speed = 100.0

[node name="weak" type="Node" parent="StateMachine" node_paths=PackedStringArray("plane")]
script = ExtResource("11_iamot")
plane = NodePath("../..")
status_texture = ExtResource("12_ajksy")
plane_texture = ExtResource("12_q7s16")
player_parry_time = 1.5
miss_time = 0.5

[node name="Timer" type="Timer" parent="StateMachine/weak"]
one_shot = true

[node name="destroyed" type="Node" parent="StateMachine" node_paths=PackedStringArray("plane")]
script = ExtResource("11_olubv")
plane = NodePath("../..")
texture = ExtResource("14_aoils")
speed = 20.0

[node name="Timer" type="Timer" parent="StateMachine/destroyed"]
wait_time = 2.0
one_shot = true

[node name="return_to_patrol" type="Node" parent="StateMachine" node_paths=PackedStringArray("plane")]
script = ExtResource("15_vt2gn")
plane = NodePath("../..")
status_texture = ExtResource("5_lpmvc")
speed = 40.0

[connection signal="return_to_patrol_after_hitting_player" from="." to="StateMachine/return_to_patrol" method="transition_to_self"]
[connection signal="weaken" from="." to="StateMachine/weak" method="enable_with_reason"]
[connection signal="set_return_patrol_point" from="StateMachine/patrol" to="StateMachine/return_to_patrol" method="set_return_point_to_current_position"]
[connection signal="timeout" from="StateMachine/detect_shock/Timer" to="StateMachine/detect_shock" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/weak/Timer" to="StateMachine/weak" method="_on_timer_timeout"]
[connection signal="timeout" from="StateMachine/destroyed/Timer" to="StateMachine/destroyed" method="_on_timer_timeout"]
